@@ -1,4 +1,3 @@
 VAR
 	idx : USINT;
-	dbState : dbState_Enum;
 END_VAR
